--- a/views/research.ejs
+++ b/views/research.ejs
@@ -65,7 +65,7 @@
 
     <div class="philo-title"><h1 class="h1-title" >RESEARCH</h1></div>
     <div class="philo_main">
-   <p class ="philo" >WE INVESTIGATE THE INTERPLAY BETWEEN TELOMERES, AUTOPHAGY, AND INNATE IMMUNITY IN PREVENTING EARLY CANCER EVOLUTION</p>
+   <p class ="philo" >WE STUDY HOW TELOMERES, AUTOPHAGY, AND INNATE IMMUNITY SYNERGIZE TO PREVENT CANCER INITIATION</p>
   </div> 
    <div id="video_motto_div" class="grid1">
       <div class="video-repeat">
