--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -490,7 +490,7 @@ font-size: 2.9vh;
 }
 .team-pg{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr ;
 grid-template-rows: 85vh 100vh;
   margin-right: 10vh;
   
