--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,31 +78,24 @@
     <section class="main2" id="home">
       <h2 class="about-title">ABOUT</h2>
       <p class="about1">
-        Most cancers arise through an evolutionary process, as genetic and epigenetic changes accumulate in somatic cells, allowing them to escape the proliferative restraints that control cell growth. Our lab studies various aspects of telomere biology, with a focus on understanding how dysfunctional telomeres create barriers to cell proliferation and restrict the development of cancer.
-      </p>
+        Cancers arise through an evolutionary process, as genetic and epigenetic changes accumulate in somatic cells and allow them to escape the proliferative restraints that normally control cell growth. Our lab studies various aspects of telomere biology, with a focus on understanding how dysfunctional telomeres create barriers to cell proliferation and limit cancer development.</p>
       <p class="about3">
-        Our research employs a combination of advanced techniques in cell biology, molecular biology, biochemistry, and single-cell multiomics, along with cell lineage barcoding, to explore the interplay between telomere function, innate immune signaling, and autophagy, and how these pathways synergize to suppress cancer initiation. Our overarching goal is to deepen our understanding of cancer biology and develop innovative strategies to combat this disease.
-      </p>
+        Our research integrates expertise in cell biology, molecular biology, biochemistry, and single-cell multiomics to explore the interplay between telomere function, innate immune signaling, and autophagy—and how they impact cancer initiation.  </p>
       <ul class="about2">
-        Currently, we are working on these aspects of telomere biology: 
-        <li>Telomere-based proliferative boundaries and cell immortalization</li>
-        <li>
-          Autophagy, cell death pathways, and cancer adaptations
-         </li>
-        <li>DNA damage-induced immune responses</li>
-        <li>
-          Telomere-driven genomic instability
+        We focus on these aspects of telomere function in aging and cancer:
+        <li>Regulation of DNA damage response and repair pathways at telomeres
         </li>
-    <li>Mitochondria-organelle contact sites and cellular aging
-    </li>
+        <li>
+          Genomic consequences of telomere dysfunction
+         </li>
+        <li>Telomeric DNA damage, autophagy, and innate immunity
+        </li>
+        
       </ul>
 
       <p class="about3">
-        We strive to create a supportive, diverse, and inclusive laboratory
-        environment with exceptional training and career development
-        opportunities for fellows and students. We encourage you to explore our
-        website and contact us for discussions, collaborations, or career
-        opportunities.
+        We strive to create a supportive, diverse, and inclusive lab environment with exceptional training and career development opportunities for fellows and students. We encourage you to explore our website and contact us for discussions, collaborations, or career opportunities.
+
       </p>
   
       <div class="fund-div">
