--- a/views/team.ejs
+++ b/views/team.ejs
@@ -35,7 +35,7 @@
 
       <p class="philo">
 
-        JOIN OUR TEAM TO EXPLORE TELOMERE BIOLOGY, AUTOPHAGY, GENOMIC INSTABILITY, AND INNATE IMMUNITY      </p>
+        WE STUDY HOW TELOMERES, AUTOPHAGY, AND INNATE IMMUNITY SYNERGIZE TO PREVENT CANCER INITIATION      </p>
     </div>
 
 
