--- a/views/team.ejs
+++ b/views/team.ejs
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Abel&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="icon" type="image/x-icon" href="https://i.imgur.com/gIkbGM0.png">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="robots" content="noindex">
-  </head>
-  <div id="container">
+
+<head>
+  <link rel="stylesheet" href="/stylesheets/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet" />
+  <link rel="icon" type="image/x-icon" href="https://i.imgur.com/gIkbGM0.png">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="robots" content="noindex">
+</head>
+<div id="container">
   <section class="main">
-    <img class="nlab-logo" src ="https://i.imgur.com/LSzCMnS.png"/>
+    <img class="nlab-logo" src="https://i.imgur.com/LSzCMnS.png" />
     <nav class="head_navbar">
       <a href="/home">Home</a>
       <a class="mainlink" href="/team">Team</a>
@@ -30,153 +25,133 @@
       <a href="/contact">Contact</a>
     </nav>
 
-    <div class="philo-title"><h1 class="h1-title">TEAM</h1></div>
+    <div class="philo-title">
+      <h1 class="h1-title">TEAM</h1>
+    </div>
     <div class="philo_main">
 
       <p class="philo">
 
-        WE STUDY HOW TELOMERES, AUTOPHAGY, AND INNATE IMMUNITY SYNERGIZE TO PREVENT CANCER INITIATION      </p>
+        WE STUDY HOW TELOMERES, AUTOPHAGY, AND INNATE IMMUNITY SYNERGIZE TO PREVENT CANCER INITIATION </p>
     </div>
 
 
 
-   
+
     <div id="video_motto_div" class="grid1">
-      <video class="team-video" autoplay muted loop poster="placeholder.png" >
-        <source src="https://i.imgur.com/sPACqEK.mp4" type=video/mp4>
-      </video>
-    </div>
-  </section>
+      <video class="team-video" autoplay muted loop poster="placeholder.png">
+        <source src="https://i.imgur.com/sPACqEK.mp4" type=video/mp4> </video> </div> </section> <body>
 
-   
-    <body>
-      
-    <section class="team-main">
-      <div class = "team-pg">
-        
-        <div class="member1">
-          <div class="m1-div">
+        <section class="team-main">
+          <div class="team-pg">
 
-            <img class="member_pic1" src="https://i.imgur.com/EGrMp2g.png" />
-            
+            <div class="member1">
+              <div class="m1-div">
+
+                <img class="member_pic1" src="https://i.imgur.com/EGrMp2g.png" />
+
+              </div>
+              <div class="member-container">
+
+                <h1 class="member-name">Joe Nassour, PhD</h1>
+                <h2 class="member-name2">Principal Investigator</h2>
+                <p class="team_desc">
+                  <span> PhD: </span>Pasteur Institute - France <br>
+                  <span>Postdoc:</span> Salk Institute for Biological Studies, CA, US <br>
+                  <span> Research interests:</span> Telomere functions in aging and cancer<br>
+                  <span> Other interests: </span>Hiking, camping, exploring new breweries
+
+
+                </p>
+              </div>
             </div>
-            <div class="member-container">
 
-            <h1 class="member-name">Joe Nassour, PhD</h1>
-            <h2 class = "member-name2">Principal Investigator</h2>
-            <p class="team_desc">
-         <span> PhD: </span>Pasteur Institute - France <br>
-         <span>Postdoc:</span>   Salk Institute for Biological Studies, CA, US <br>
-          <span> Research interests:</span> Telomere functions in aging and cancer<br>
-            <span> Other interests: </span>Hiking, camping, exploring new breweries
-           
+            <div class="member1">
+              <div class="m1-div">
 
-            </p> 
+                <img class="member_pic1" src=" https://i.imgur.com/YEeFr9y.png" />
+
+              </div>
+              <div class="member-container">
+
+                <h1 class="member-name">Abigail Gillespie, PhD </h1>
+                <h2 class="member-name2">Postdoctoral Fellow</h2>
+                <p class="team_desc">
+                  <span>PhD: </span> University of California San Diego, CA, US<br>
+                  <span>Research interests:</span> DNA damage signaling pathways at telomeres and replicative aging <br>
+                  <span>Other interests:</span> Science outreach, running, reading, and going to the farmers' market
+                </p>
+              </div>
+            </div>
+            <div class="member1">
+              <div class="m1-div">
+
+                <img class="member_pic1" src="https://i.imgur.com/imm7j9K.png" />
+
+              </div>
+              <div class="member-container">
+
+                <h1 class="member-name">Rachid Boutoual, PhD </h1>
+                <h2 class="member-name2">Postdoctoral Fellow</h2>
+                <p class="team_desc">
+                  <span>PhD: </span>University of Abdelmalek Essaadi, Morocco and the Principe Felipe Research Center,
+                  Spain <br>
+                  <span>Postdoc: </span>The Buck Institute for Research on Aging, CA, US <br>
+                  <span>Research interests:</span> Telomere-mitochondrial crosstalk and innate immunity <br>
+                  <span>Other interests:</span> Soccer, hiking, and exploring new places
+                </p>
+              </div>
+
+            </div>
+            <div class="member1">
+              <div class="m1-div">
+
+                <img class="member_pic1" src="https://i.imgur.com/o1R6A3v.png" />
+
+              </div>
+              <div class="member-container">
+
+                <h1 class="member-name">Remington Hoerr, PhD</h1>
+                <h2 class="member-name2">Postdoctoral Fellow</h2>
+                <p class="team_desc">
+                  <span>PhD: </span>Vanderbilt University Nashville, TN, US<br>
+
+                  <span>Research interests:</span> TERRA signaling and functions in aging and cancer <br>
+                  <span>Other interests:</span> Big Brother, embroidery, podcasts, and coffee shops
+                </p>
+              </div>
+
+            </div>
+
+
+
+
+            <div class="member1">
+              <div class="m1-div">
+
+                <img class="member_pic1" src="https://i.imgur.com/LIovu1w.png" />
+
+              </div>
+              <div class="member-container">
+
+                <h1 class="member-name">Alexander Beacom</h1>
+                <h2 class="member-name2">PhD Student</h2>
+                <p class="team_desc">
+                  <span>B.S.: </span>University of Notre Dame, IN, US <br>
+
+                  <span>Research interests:</span> &nbsp Key signaling differences between anti- and pro-tumor autophagy
+                  <br>
+                  <span>Other interests:</span> Hiking, snowboarding, and cooking/baking
+                </p>
+              </div>
+
             </div>
           </div>
 
-          <div class="member1">
-            <div class="m1-div">
-  
-              <img class="member_pic1" src=" https://i.imgur.com/YEeFr9y.png" />
-              
-              </div>
-            <div class="member-container">
-  
-              <h1 class="member-name">Abigail Gillespie, PhD  </h1>
-              <h2 class = "member-name2">Postdoctoral Fellow</h2>
-              <p class="team_desc">
-                <span>PhD: </span> University of California San Diego, CA, US<br>
-                <span>Research interests:</span> DNA damage signaling pathways at telomeres and replicative aging <br>
-                <span>Other interests:</span> Science outreach, running, reading, and going to the farmers' market
-              </p> 
-            </div>
-            </div>
-            <div class="member1">
-              <div class="m1-div">
-    
-                <img class="member_pic1" src="https://i.imgur.com/imm7j9K.png" />
-                
-                </div>
-                <div class="member-container">
-    
-                <h1 class="member-name">Rachid Boutoual, PhD  </h1>
-                <h2 class = "member-name2">Postdoctoral Fellow</h2>
-                <p class="team_desc">
-                  <span>PhD: </span>University of Abdelmalek Essaadi, Morocco and the Principe Felipe Research Center, Spain <br>
-                    <span>Postdoc: </span>The Buck Institute for Research on Aging, CA, US <br>
-                    <span>Research interests:</span> Telomere-mitochondrial crosstalk and innate immunity    <br>
-                    <span>Other interests:</span>    Soccer, hiking, and exploring new places
-                </p>  
-              </div>
-         
-            </div>
-            <div class="member1">
-              <div class="m1-div">
-    
-                <img class="member_pic1" src="https://i.imgur.com/o1R6A3v.png" />
-                
-                </div>
-                <div class="member-container">
-    
-                <h1 class="member-name">Remington Hoerr, PhD</h1>
-                <h2 class = "member-name2">Postdoctoral Fellow</h2>
-                <p class="team_desc">
-                  <span>PhD: </span>Vanderbilt University Nashville, TN, US<br>
-                    
-                    <span>Research interests:</span> TERRA signaling and functions in aging and cancer  <br>
-                    <span>Other interests:</span>   Big Brother, embroidery, podcasts, and coffee shops
-                </p>  
-              </div>
-         
-            </div>
-            
-
-            
-            <div class="member1">
-              <div class="m1-div">
-    
-                <img class="member_pic1" src="https://i.imgur.com/kwtkfEI.png" />
-                
-                </div>
-                <div class="member-container">
-    
-                <h1 class="member-name">Selena Martinez</h1>
-                <h2 class = "member-name2">PhD Student</h2>
-                <p class="team_desc">
-                  <span>B.S.: </span>Michigan State University, MI, US <br>
-                    
-                    <span>Research interests:</span> Mitochondrial signaling in cancer  <br>
-                    <span>Other interests:</span>   Cooking, hiking, paddle boarding, live music, volunteering
-                </p>  
-              </div>
-         
-            </div>    
-            <div class="member1">
-              <div class="m1-div">
-    
-                <img class="member_pic1" src="https://i.imgur.com/LIovu1w.png" />
-                
-                </div>
-                <div class="member-container">
-    
-                <h1 class="member-name">Alexander Beacom</h1>
-                <h2 class = "member-name2">PhD Student</h2>
-                <p class="team_desc">
-                  <span>B.S.: </span>University of Notre Dame, IN, US <br>
-                    
-                    <span>Research interests:</span> &nbsp Key signaling differences between anti- and pro-tumor autophagy  <br>
-                    <span>Other interests:</span>   Hiking, snowboarding, and cooking/baking
-                </p>  
-              </div>
-         
-            </div>    
-      </div>
-    
-    </body>
+          </body>
 
 
-  </section>
-  <%- include('./partials/footer') %>
- 
+        </section>
+        <%- include('./partials/footer') %>
+
 </html>
