--- a/views/team.ejs
+++ b/views/team.ejs
@@ -59,7 +59,7 @@
                   <span> PhD: </span>Pasteur Institute - France <br>
                   <span>Postdoc:</span> Salk Institute for Biological Studies, CA, US <br>
                   <span> Research interests:</span> Telomere functions in aging and cancer<br>
-                  <span> Other interests: </span>Hiking, camping, exploring new breweries
+                  <span> Other interests: </span>Movies, exploring new restaurants
 
 
                 </p>
