--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,7 @@
         We are committed to fostering a supportive, inclusive, and diverse lab culture. We offer exceptional training and career development opportunities for students and fellows. We invite you to explore our website and connect with us to learn more about our research, potential collaborations, or opportunities to join the lab.   </p>
   
       <div class="fund-div">
-        <img class="fund1" src="https://i.imgur.com/ogMxRHA.png" />
+        <img class="fund1" src="https://i.imgur.com/TQo4ElU.png" />
        
       
       </div>
