--- a/views/publications.ejs
+++ b/views/publications.ejs
@@ -44,10 +44,42 @@
     <section class="main2">
 <div class="pub-div">
   <h1 class="year">
-      2023
+      FEATURED  PUBLICATIONS
 
     </h1>
+    <a class="pub-click"
+    onclick="window.open ('https://www.nature.com/articles/s41586-023-05710-8', ''); return false"
+    href="javascript:void(0);"
+    >  
+<h2 class="pub-title">
+  Telomere-to-mitochondria signalling by ZBP1 mediates replicative crisis.</h2>
+      </a>
+      Nassour J, Aguiar LG, Correia A, Schmidt TT, Mainz L, Przetocka S, Haggblom C, Tadepalle N, Williams A, Shokhirev MN, Akincilar SC, Tergaonkar V, Shadel GS, Karlseder J. Nature. 2023.
 
+      <a class="pub-click"
+      onclick="window.open ('https://www.nature.com/articles/s41586-019-0885-0', ''); return false"
+      href="javascript:void(0);"
+      >  
+  <h2 class="pub-title">
+    Autophagic cell death restricts chromosomal instability during replicative crisis.</h2>
+        </a>
+        Nassour J, Radford R, Correia A, Fusté JM, Schoell B, Jauch A, Shaw RJ, Karlseder J.
+
+Nature. 2019.
+<a class="pub-click"
+onclick="window.open ('https://www.nature.com/articles/ncomms10399', ''); return false"
+href="javascript:void(0);"
+>  
+<h2 class="pub-title">
+  Defective DNA single-strand break repair is responsible for senescence and neoplastic escape of epithelial cells.</h2>
+  </a>
+  Nassour J, Martien S, Martin N, Deruy E, Tomellini E, Malaquin N, Bouali F, Sabatier L, Wernert N, Pinte S, Gilson E, Pourtier A, Pluquet O, Abbadie C.
+
+Nature Communications. 2016.
+
+<h1 class="year">
+  ALL PUBLICATIONS
+  </h1>
     <a class="pub-click"
     onclick="window.open ('https://www.sciencedirect.com/science/article/pii/S1568786423001453?via%3Dihub', ''); return false"
     href="javascript:void(0);"
@@ -55,7 +87,7 @@
 <h2 class="pub-title">
   Telomeres as hotspots for innate immunity and inflammation.</h2>
       </a>
-      Nassour J, Przetocka S, Karlseder J. DNA Repair 2023. PMID: 37951043.
+      Nassour J, Przetocka S, Karlseder J. DNA Repair 2023. 
 
 
       <a class="pub-click"
@@ -65,7 +97,7 @@
   <h2 class="pub-title">
     Flow Cytometry-based Method for Efficient Sorting of Senescent Cells.</h2>
         </a>
-        Goy E, Martin N, Drullion C, Saas L, Molendi-Coste O, Pineau L, Dombrowicz D, Deruy E, Bauderlique-Le-Roy H, Samyn O, Nassour J, De Launoit Y, Abbadie C. Bio Protoc 2023. PMID: 37056241.
+        Goy E, Martin N, Drullion C, Saas L, Molendi-Coste O, Pineau L, Dombrowicz D, Deruy E, Bauderlique-Le-Roy H, Samyn O, Nassour J, De Launoit Y, Abbadie C. Bio Protoc 2023. 
 
 
 
@@ -92,12 +124,10 @@
       </a>
       Nassour J, Aguiar LG, Correia A, Schmidt TT, Mainz L, Przetocka S, Haggblom C, Tadepalle N, Williams A, Shokhirev MN, Akincilar SC, Tergaonkar V, Shadel GS, Karlseder J.
       
-      Nature 2023. PMID: 36755096.
+      Nature 2023. 
       
        
-      <h1 class="year">
-      2022
-      </h1>
+   
       <a class="pub-click"
       onclick="window.open ('https://academic.oup.com/nar/article/50/13/7493/6640220?login=false', ''); return false"
       href="javascript:void(0);"
@@ -107,7 +137,7 @@
       </a>
       Mendez-Bermudez A, Lototska L, Pousse M, Tessier F, Croce O, Latrick CM, Cherdyntseva V, Nassour J, Xiaohua J, Lu Y, Abbadie C, Gagos S, Ye J, Gilson E.
       
-      Nucleic Acids Res. 2022. PMID: 35819196.
+      Nucleic Acids Res. 2022. 
       
       <a class="pub-click"
       onclick="window.open ('https://elifesciences.org/articles/67190', ''); return false"
@@ -118,12 +148,10 @@
       </a>
       Goy E, Tomezak M, Facchin C, Martin N, Bouchaert E, Benoit J, de Schutter C, Nassour J, Saas L, Drullion C, Brodin PM, Vandeputte A, Molendi-Coste O, Pineau L, Goormachtigh G, Pluquet O, Pourtier A, Cleri F, Lartigau E, Penel N, Abbadie C.
       
-      Elife 2022. PMID: 35302491.
+      Elife 2022.
       
        
-      <h1 class="year">
-      2021
-      </h1>
+    
       <a class="pub-click"
       onclick="window.open ('https://www.annualreviews.org/doi/abs/10.1146/annurev-cancerbio-050420-023410', ''); return false"
       href="javascript:void(0);"
@@ -133,13 +161,10 @@
       </a>
       Nassour J, Schmidt TT, Karlseder J.
       
-      Annu Rev Cancer Biol. 2021. PMID: 34532611.
+      Annu Rev Cancer Biol. 2021.
       
        
-      <h1 class="year">
-      2019
       
-      </h1>
       <a class="pub-click"
       onclick="window.open ('https://www.nature.com/articles/s41586-019-0885-0', ''); return false"
       href="javascript:void(0);"
@@ -149,12 +174,9 @@
       </a>
       Nassour J, Radford R, Correia A, Fusté JM, Schoell B, Jauch A, Shaw RJ, Karlseder J.
       
-      Nature 2019. PMID: 30675059.
+      Nature 2019. 
       
-      <h1 class="year">
-      
-      2013 - 2018
-      </h1>
+   
       <a class="pub-click"
       onclick="window.open ('https://www.oncotarget.com/article/13807/', ''); return false"
       href="javascript:void(0);"
@@ -164,7 +186,7 @@
       </a>
       Paget S, Dubuissez M, Dehennaut V, Nassour J, Harmon BT, Spruyt N, Loison I, Abbadie C, Rood BR, Leprince D.
       
-      Oncotarget 2017. PMID: 27935866.
+      Oncotarget 2017. 
       <a class="pub-click"
       onclick="window.open ('https://www.tandfonline.com/doi/full/10.1080/23723556.2016.1190885', ''); return false"
       href="javascript:void(0);"
@@ -175,7 +197,7 @@
       </a>
       Nassour J, Abbadie C.
       
-      Mol Cell Oncol. 2016. PMID: 27857969.
+      Mol Cell Oncol. 2016. 
       
       <a class="pub-click"
       onclick="window.open ('https://www.nature.com/articles/ncomms10399', ''); return false"
@@ -186,7 +208,7 @@
       </a>
       Nassour J, Martien S, Martin N, Deruy E, Tomellini E, Malaquin N, Bouali F, Sabatier L, Wernert N, Pinte S, Gilson E, Pourtier A, Pluquet O, Abbadie C.
       
-      Nat Commun. 2016. PMID: 26822533.
+      Nat Commun. 2016. 
       
       <a class="pub-click"
       onclick="window.open ('https://www.nature.com/articles/cddis2014533', ''); return false"
@@ -197,7 +219,7 @@
       </a>
       Deruy E*, Nassour J*, Martin N, Vercamer C, Malaquin N, Bertout J, Chelli F, Pourtier A, Pluquet O, Abbadie C.
       
-      Cell Death Dis. 2014. PMID: 25522271.
+      Cell Death Dis. 2014. 
     </br> *Equal Contribution
       
       <a class="pub-click"
@@ -209,8 +231,9 @@
      </a> 
       Dehennaut V, Loison I, Dubuissez M, Nassour J, Abbadie C, Leprince D.
       
-      J Biol Chem. 2013. PMID: 23417673.
+      J Biol Chem. 2013. 
 </div>
+
     </section>
     <%- include('./partials/footer') %>
   </div>
