--- a/views/publications.ejs
+++ b/views/publications.ejs
@@ -80,6 +80,45 @@ Nature Communications. 2016.
 <h1 class="year">
   ALL PUBLICATIONS
   </h1>
+  <a class="pub-click"
+  onclick="window.open ('https://cshperspectives.cshlp.org/content/early/2025/08/11/cshperspect.a041688', ''); return false"
+  href="javascript:void(0);"
+  >  
+<h2 class="pub-title">
+  Telomere Crisis Shapes Cancer Evolution.</h2>
+    </a>Nassour J, Karlseder J.
+
+    Cold Spring Harbor Perspectives in Biology. 2025.
+  <a class="pub-click"
+  onclick="window.open ('https://www.nature.com/articles/s41467-025-61828-5', ''); return false"
+  href="javascript:void(0);"
+  >  
+<h2 class="pub-title">
+  TRF1 relies on fork reversal to prevent fragility at human telomeres.</h2>
+    </a>
+    Vaurs M, Claude E, Zanella E, Rodrigues J, Nassour J, Karlseder J, Azzalin CM, Doksani Y, Decottignies A.
+
+    Nature Communications. 2025.
+  <a class="pub-click"
+  onclick="window.open ('https://www.biorxiv.org/content/10.1101/2025.04.18.649516v1', ''); return false"
+  href="javascript:void(0);"
+  >  
+<h2 class="pub-title">
+  Constitutive cGAS–STING activation in ALT⁺ cells.</h2>
+    </a>
+    Geelen D, Beacom A, Vaurs M, Mahieu M, Boutoual R, Derumier A, Hoerr R, Loriot A, Nassour J, Decottignies A.
+
+    bioRxiv. 2025.
+  <a class="pub-click"
+    onclick="window.open ('https://www.aging-us.com/article/206149/text', ''); return false"
+    href="javascript:void(0);"
+    >  
+<h2 class="pub-title">
+  Prostaglandin E₂ regulates senescence and post-senescence neoplastic escape in primary human keratinocytes.</h2>
+      </a>
+      Srour E, Martin N, Drullion C, De Schutter C, Giroud J, Pioger A, Deslé J, Saas L, Nassour J, Théry J, Decanter G, Penel N, Vercamer C, Salazar-Cardozo C, Abbadie C, Pluquet O.
+
+Aging (Albany NY). 2024.
     <a class="pub-click"
     onclick="window.open ('https://www.sciencedirect.com/science/article/pii/S1568786423001453?via%3Dihub', ''); return false"
     href="javascript:void(0);"
